--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint": "biome lint --write",
     "lint:check": "biome lint",
     "check": "biome check --write",
+    "check:force": "biome check --write --unsafe",
     "ci": "biome ci"
   },
   "devDependencies": {
