--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,5 +6,8 @@
   "type": "module",
   "scripts": {
     "dev": "bun --hot run ./src/app.ts"
+  },
+  "dependencies": {
+    "valibot": "^1.1.0"
   }
 }
