--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@polys/server",
   "version": "0.1.0",
+  "description": "High-performance signing server for Polymarket API built with Bun",
   "license": "MIT",
   "private": true,
   "type": "module",
   "scripts": {
+    "start": "bun run ./src/app.ts",
     "dev": "bun --hot run ./src/app.ts"
   },
   "dependencies": {
