--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lint:check": "biome lint",
     "check": "biome check --write",
     "check:force": "biome check --write --unsafe",
-    "ci": "biome ci"
+    "ci": "biome ci",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.4",
