--- a/packages/polymarket/package.json
+++ b/packages/polymarket/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@polys/order-book",
+  "name": "@dicedhq/polymarket",
   "version": "0.1.0",
-  "description": "TypeScript client for the Polymarket CLOB (Central Limit Order Book) API",
+  "description": "TypeScript client for the Polymarket API",
   "license": "MIT",
   "type": "module",
   "author": {
@@ -20,13 +20,13 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/roushou/polys",
-    "directory": "packages/order-book"
+    "url": "https://github.com/roushou/dicedhq",
+    "directory": "packages/polymarket"
   },
   "bugs": {
-    "url": "https://github.com/roushou/polys/issues"
+    "url": "https://github.com/roushou/dicedhq/issues"
   },
-  "homepage": "https://github.com/roushou/polys#readme",
+  "homepage": "https://github.com/roushou/dicedhq#readme",
   "exports": {
     ".": "./src/index.ts"
   },
@@ -36,7 +36,7 @@
     "LICENSE"
   ],
   "dependencies": {
-    "@polys/signer": "workspace:*",
+    "@dicedhq/signer": "workspace:*",
     "ky": "^1.14.0",
     "viem": "^2.38.6"
   }
