--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@polys/server",
+  "name": "@dicedhq/server",
   "version": "0.1.0",
   "description": "High-performance signing server for Polymarket API built with Bun",
   "license": "MIT",
@@ -10,7 +10,7 @@
     "dev": "bun --hot run ./src/app.ts"
   },
   "dependencies": {
-    "@polys/signer": "workspace:*",
+    "@dicedhq/signer": "workspace:*",
     "valibot": "^1.1.0"
   }
 }
