--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "check": "biome check --write",
     "check:force": "biome check --write --unsafe",
     "ci": "biome ci",
+    "build": "bun run --filter='@dicedhq/*' build",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
