--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -1,8 +1,8 @@
 # Required
-DICED_POLYMARKET_API_KEY=your_api_key
-DICED_POLYMARKET_SECRET=your_base64_secret
-DICED_POLYMARKET_PASSPHRASE=your_passphrase
+POLYS_POLYMARKET_API_KEY=your_api_key
+POLYS_POLYMARKET_SECRET=your_base64_secret
+POLYS_POLYMARKET_PASSPHRASE=your_passphrase
 
 # Optional
-DICED_SERVER_HOSTNAME=127.0.0.1
-DICED_SERVER_PORT=8080
+POLYS_SERVER_HOSTNAME=127.0.0.1
+POLYS_SERVER_PORT=8080
