--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,8 @@ jobs:
       - name: Run tests
         run: bun test
 
-  type-check:
-    name: Type Check
+  typecheck:
+    name: Typecheck
     runs-on: ubuntu-latest
 
     steps:
@@ -66,4 +66,4 @@ jobs:
         run: bun run build
 
       - name: Type check
-        run: bun run typecheck
+        run: bun run check:types
