--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "lint:check": "biome lint",
     "check": "biome check --write",
     "check:force": "biome check --write --unsafe",
+    "check:types": "tsc --noEmit",
     "ci": "biome ci",
-    "build": "bun run --filter='@dicedhq/*' build",
-    "typecheck": "tsc --noEmit"
+    "build": "bun run --filter='@dicedhq/*' build"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.4",
