--- a/packages/polymarket/package.json
+++ b/packages/polymarket/package.json
@@ -4,6 +4,10 @@
   "description": "TypeScript client for the Polymarket API",
   "license": "MIT",
   "type": "module",
+  "engines": {
+    "node": ">=22.x",
+    "bun": ">=1.3.x"
+  },
   "author": {
     "name": "Kenji Lau",
     "email": "hello@kenji.sh",
