chore: add scripts to publish polymarket package

--- a/packages/polymarket/package.json
+++ b/packages/polymarket/package.json
@@ -46,7 +46,9 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "tsgo"
+    "build": "tsgo",
+    "prepublishOnly": "bun run build",
+    "publish:npm": "npm publish --access public"
   },
   "dependencies": {
     "ky": "^1.14.0",
