--- a/packages/clob/package.json
+++ b/packages/clob/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@dicedhq/polymarket",
-  "version": "0.1.4",
-  "description": "TypeScript SDK for the Polymarket API (combines CLOB and Gamma)",
+  "name": "@dicedhq/clob",
+  "version": "0.1.0",
+  "description": "Polymarket Clob TypeScript library",
   "license": "MIT",
   "type": "module",
   "engines": {
@@ -17,7 +17,6 @@
     "polymarket",
     "order-book",
     "clob",
-    "gamma",
     "trading",
     "prediction-markets",
     "crypto"
@@ -25,7 +24,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/roushou/polys",
-    "directory": "packages/polymarket"
+    "directory": "packages/clob"
   },
   "bugs": {
     "url": "https://github.com/roushou/polys/issues"
@@ -48,11 +47,11 @@
   "scripts": {
     "build": "tsgo",
     "prepublishOnly": "bun run build",
-    "publish:npm": "npm publish --access public"
+    "publish:npm": "npm publish --access public",
+    "publish:jsr": "bunx jsr publish",
+    "publish:dry-run": "npm publish --dry-run && bunx jsr publish --dry-run"
   },
   "dependencies": {
-    "@dicedhq/clob": "workspace:*",
-    "@dicedhq/gamma": "workspace:*",
     "ky": "^1.14.0",
     "viem": "catalog:"
   },
