--- a/packages/gamma/package.json
+++ b/packages/gamma/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@dicedhq/polymarket",
-  "version": "0.1.4",
-  "description": "TypeScript SDK for the Polymarket API (combines CLOB and Gamma)",
+  "name": "@dicedhq/gamma",
+  "version": "0.1.0",
+  "description": "Polymarket Gamma TypeScript library",
   "license": "MIT",
   "type": "module",
   "engines": {
@@ -16,7 +16,6 @@
   "keywords": [
     "polymarket",
     "order-book",
-    "clob",
     "gamma",
     "trading",
     "prediction-markets",
@@ -25,7 +24,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/roushou/polys",
-    "directory": "packages/polymarket"
+    "directory": "packages/gamma"
   },
   "bugs": {
     "url": "https://github.com/roushou/polys/issues"
@@ -48,13 +47,13 @@
   "scripts": {
     "build": "tsgo",
     "prepublishOnly": "bun run build",
-    "publish:npm": "npm publish --access public"
+    "publish:npm": "npm publish --access public",
+    "publish:jsr": "bunx jsr publish",
+    "publish:dry-run": "npm publish --dry-run && bunx jsr publish --dry-run"
   },
   "dependencies": {
-    "@dicedhq/clob": "workspace:*",
-    "@dicedhq/gamma": "workspace:*",
     "ky": "^1.14.0",
-    "viem": "catalog:"
+    "viem": "^2.38.6"
   },
   "devDependencies": {
     "@typescript/native-preview": "^7.0.0-dev.20251112.1"
