fix: resolve builder order
The previous build script didn't respect workspace dependencies order
which made `polymarket` package build before `gamma` and `clob` while it
should be the last one

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
+      - name: Build
+        run: bun run build
+
       - name: Run Biome CI (lint + format check)
         run: bun run ci
 
