fix: remove usage of catalogs
JSR doesn't support catalogs yet

--- a/packages/clob/package.json
+++ b/packages/clob/package.json
@@ -58,6 +58,6 @@
     "@typescript/native-preview": "^7.0.0-dev.20251112.1"
   },
   "peerDependencies": {
-    "viem": "catalog:"
+    "viem": "^2.38.6"
   }
 }
