--- a/packages/clob/package.json
+++ b/packages/clob/package.json
@@ -49,7 +49,7 @@
     "prepublishOnly": "bun run build",
     "publish:npm": "bun publish --access public",
     "publish:jsr": "bunx jsr publish",
-    "publish:dry-run": "npm publish --dry-run && bunx jsr publish --dry-run"
+    "publish:dry-run": "bun publish --dry-run && bunx jsr publish --dry-run"
   },
   "dependencies": {
     "ky": "^1.14.0"
