--- a/packages/gamma/package.json
+++ b/packages/gamma/package.json
@@ -47,9 +47,9 @@
   "scripts": {
     "build": "tsgo",
     "prepublishOnly": "bun run build",
-    "publish:npm": "npm publish --access public",
+    "publish:npm": "bun publish --access public",
     "publish:jsr": "bunx jsr publish",
-    "publish:dry-run": "npm publish --dry-run && bunx jsr publish --dry-run"
+    "publish:dry-run": "bun publish --dry-run && bunx jsr publish --dry-run"
   },
   "dependencies": {
     "ky": "^1.14.0"
