--- a/packages/polymarket/package.json
+++ b/packages/polymarket/package.json
@@ -48,7 +48,7 @@
   "scripts": {
     "build": "tsgo",
     "prepublishOnly": "bun run build",
-    "publish:npm": "npm publish --access public"
+    "publish:npm": "bun publish --access public"
   },
   "dependencies": {
     "@dicedhq/clob": "workspace:*",
