feat: verify bearer token against API tokens

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -2,6 +2,7 @@
 POLYS_POLYMARKET_API_KEY=your_api_key
 POLYS_POLYMARKET_SECRET=your_base64_secret
 POLYS_POLYMARKET_PASSPHRASE=your_passphrase
+POLYS_API_TOKENS=token1,token2,token3
 
 # Optional
 POLYS_SERVER_HOSTNAME=127.0.0.1
