chore: add script to publish to JSR and dry-run publishing

--- a/packages/polymarket/package.json
+++ b/packages/polymarket/package.json
@@ -48,7 +48,10 @@
   "scripts": {
     "build": "tsgo",
     "prepublishOnly": "bun run build",
-    "publish:npm": "bun publish --access public"
+    "publish:npm": "bun publish --access public",
+    "publish:jsr": "bunx jsr publish",
+    "publish:dry-run": "bun publish --dry-run && bunx jsr publish --dry-run"
+
   },
   "dependencies": {
     "@dicedhq/clob": "workspace:*",
