--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -1,27 +1,19 @@
 {
-  "name": "@dicedhq/cli",
+  "name": "polys",
   "version": "0.1.0",
-  "description": "CLI for interacting with Polymarket APIs",
+  "description": "A CLI application",
   "type": "module",
-  "license": "MIT",
-  "author": {
-    "name": "Kenji Lau",
-    "email": "hello@kenji.sh",
-    "url": "https://kenji.sh"
-  },
-  "bin": {
-    "polys": "./dist/cli"
-  },
   "scripts": {
     "dev": "bun run src/index.ts",
-    "build": "bun run build.ts",
-    "build:all": "bun run build.ts --all"
+    "start": "bun run dist/index.js"
   },
   "dependencies": {
     "@dicedhq/data": "workspace:*",
-    "@dicedhq/gamma": "workspace:*"
+    "@dicedhq/gamma": "workspace:*",
+    "boune": "^0.5.0"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "typescript": "^5.0.0"
   }
 }
