--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Install dependencies
         run: bun install --frozen-lockfile
 
+      - name: Build workspace packages
+        run: bun run build
+
       - name: Build CLI
         working-directory: apps/cli
         run: bun run build.ts --target ${{ matrix.target }}
